stabilization and final connectins

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -226,7 +226,7 @@
             </div>
             <div class="info-item">
                 <div class="info-label">WebSocket Server</div>
-                <div class="info-value" id="ws-url">ws://localhost:9002</div>
+                <div class="info-value" id="ws-url">ws://157.173.101.159:9003</div>
             </div>
         </div>
 
