--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Face-Locked Servo Dashboard - Team Minister</title>
+    <title>Face-Locked Servo Dashboard - by Saly Nelson</title>
     <style>
         * {
             margin: 0;
@@ -13,24 +13,37 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #7e22ce 100%);
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             color: #333;
+            animation: backgroundShift 10s ease infinite;
+        }
+
+        @keyframes backgroundShift {
+            0%, 100% { background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #7e22ce 100%); }
+            50% { background: linear-gradient(135deg, #2a5298 0%, #7e22ce 50%, #1e3c72 100%); }
         }
 
         .header {
-            background: rgba(255, 255, 255, 0.95);
-            padding: 20px;
+            background: rgba(255, 255, 255, 0.98);
+            padding: 25px;
             text-align: center;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+            backdrop-filter: blur(10px);
+            border-bottom: 2px solid rgba(126, 34, 206, 0.3);
         }
 
         .header h1 {
-            color: #4a5568;
-            font-size: 2.5em;
+            color: #2d3748;
+            font-size: 2.8em;
             margin-bottom: 10px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .team-info {
@@ -50,50 +63,117 @@
         }
 
         .card {
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 15px;
-            padding: 25px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.98);
+            border-radius: 20px;
+            padding: 30px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
             flex: 1;
-            min-width: 300px;
+            min-width: 320px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 2px;
+            background: linear-gradient(90deg, transparent, #7e22ce, transparent);
+            animation: shimmer 3s infinite;
+        }
+
+        @keyframes shimmer {
+            0% { left: -100%; }
+            100% { left: 100%; }
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
         }
 
         .card h2 {
-            color: #4a5568;
+            color: #2d3748;
             margin-bottom: 20px;
-            font-size: 1.5em;
-            border-bottom: 2px solid #e2e8f0;
-            padding-bottom: 10px;
+            font-size: 1.6em;
+            border-bottom: 3px solid #7e22ce;
+            padding-bottom: 12px;
+            position: relative;
+        }
+
+        .card h2::after {
+            content: '';
+            position: absolute;
+            bottom: -3px;
+            left: 0;
+            width: 50px;
+            height: 3px;
+            background: linear-gradient(90deg, #7e22ce, #667eea);
         }
 
         .status-indicator {
             display: inline-block;
-            width: 12px;
-            height: 12px;
+            width: 16px;
+            height: 16px;
             border-radius: 50%;
-            margin-right: 8px;
+            margin-right: 10px;
+            position: relative;
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.1); }
         }
 
         .status-connected {
-            background-color: #48bb78;
-            box-shadow: 0 0 10px #48bb78;
+            background: linear-gradient(135deg, #10b981, #059669);
+            box-shadow: 0 0 20px rgba(16, 185, 129, 0.6);
         }
 
         .status-disconnected {
-            background-color: #f56565;
-            box-shadow: 0 0 10px #f56565;
+            background: linear-gradient(135deg, #ef4444, #dc2626);
+            box-shadow: 0 0 20px rgba(239, 68, 68, 0.6);
         }
 
         .movement-status {
-            font-size: 2em;
+            font-size: 2.2em;
             font-weight: bold;
             text-align: center;
-            padding: 20px;
-            border-radius: 10px;
+            padding: 25px;
+            border-radius: 15px;
             margin: 15px 0;
-            transition: all 0.3s ease;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            position: relative;
+            overflow: hidden;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        .movement-status::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(45deg, transparent, rgba(255,255,255,0.1), transparent);
+            transform: rotate(45deg);
+            transition: all 0.6s;
+        }
+
+        .movement-status:hover::before {
+            animation: shine 0.6s ease-in-out;
+        }
+
+        @keyframes shine {
+            0% { transform: translateX(-100%) translateY(-100%) rotate(45deg); }
+            100% { transform: translateX(100%) translateY(100%) rotate(45deg); }
         }
 
         .status-move-left {
@@ -124,30 +204,73 @@
         .servo-display {
             text-align: center;
             margin: 20px 0;
+            position: relative;
         }
 
         .servo-angle {
-            font-size: 3em;
+            font-size: 3.5em;
             font-weight: bold;
-            color: #4a5568;
-            margin: 10px 0;
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            margin: 15px 0;
+            text-shadow: 0 2px 10px rgba(102, 126, 234, 0.3);
+            animation: angleGlow 2s ease-in-out infinite alternate;
+        }
+
+        @keyframes angleGlow {
+            0% { filter: brightness(1); }
+            100% { filter: brightness(1.2); }
         }
 
         .servo-bar {
             width: 100%;
-            height: 30px;
-            background: #e2e8f0;
-            border-radius: 15px;
+            height: 40px;
+            background: linear-gradient(135deg, #e2e8f0, #cbd5e0);
+            border-radius: 20px;
             overflow: hidden;
             position: relative;
-            margin: 15px 0;
+            margin: 20px 0;
+            box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .servo-bar::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
+            animation: barShine 3s infinite;
+        }
+
+        @keyframes barShine {
+            0% { transform: translateX(-100%); }
+            100% { transform: translateX(100%); }
         }
 
         .servo-indicator {
             height: 100%;
-            background: linear-gradient(90deg, #4299e1, #3182ce);
-            transition: width 0.3s ease;
-            border-radius: 15px;
+            background: linear-gradient(90deg, #667eea, #764ba2, #7e22ce);
+            transition: width 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+            border-radius: 20px;
+            position: relative;
+            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+        }
+
+        .servo-indicator::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            right: 10px;
+            transform: translateY(-50%);
+            width: 8px;
+            height: 8px;
+            background: white;
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
         }
 
         .info-grid {
@@ -158,10 +281,33 @@
         }
 
         .info-item {
-            background: #f7fafc;
-            padding: 15px;
-            border-radius: 8px;
-            border-left: 4px solid #4299e1;
+            background: linear-gradient(135deg, #f7fafc, #edf2f7);
+            padding: 18px;
+            border-radius: 12px;
+            border-left: 5px solid #7e22ce;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .info-item::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(126, 34, 206, 0.1), transparent);
+            transition: left 0.5s ease;
+        }
+
+        .info-item:hover::before {
+            left: 100%;
+        }
+
+        .info-item:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 20px rgba(126, 34, 206, 0.2);
         }
 
         .info-label {
@@ -213,7 +359,7 @@
 <body>
     <div class="header">
         <h1>🎯 Face-Locked Servo Dashboard</h1>
-        <div class="team-info">Team: Minister | Real-time Tracking System</div>
+        <div class="team-info">Team: sudoers | Real-time Tracking System | by Saly Nelson</div>
     </div>
 
     <div class="container">
@@ -226,7 +372,7 @@
             </div>
             <div class="info-item">
                 <div class="info-label">WebSocket Server</div>
-                <div class="info-value" id="ws-url">ws://157.173.101.159:9003</div>
+                <div class="info-value" id="ws-url">ws://157.173.101.159:9002</div>
             </div>
         </div>
 
@@ -290,7 +436,7 @@
                 this.ws = null;
                 this.reconnectInterval = null;
                 this.heartbeatData = {};
-                this.wsUrl = 'ws://157.173.101.159:9003'; // Change to your VPS IP:9003
+                this.wsUrl = 'ws://157.173.101.159:9002'; // Change to your VPS IP:9002
 
                 this.init();
             }
